--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <svg>
                 <text x="50%" y="50%" dy=".35em" text-anchor="middle">
-                    Parenthesis Checker
+                    {Parenthesis Checker}
                 </text>
             </svg>
         </div>
