responsive support for iphone

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parentheses Checker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -51,7 +52,8 @@
             </div>
             <div class="result-container"></div>
         </div>
-        <script src="script.js"></script>
+        <script src="script.js">
+        </script>
         
 </body>
 
